service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: test
  name: test-svc
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8001
  selector:
    app: test
  type: ClusterIP
status:
  loadBalancer: {}
