ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
spec:
  tls:
    - hosts:
        - customnginx.com
      secretName: test-tls-secret
  rules:
    - host: customnginx.com
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: test-svc
                port:
                  number: 80
